--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "clsx": "^2.1.1",
         "framer-motion": "^11.11.17",
         "lucide-react": "^0.460.0",
-        "next": "15.0.3",
-        "react": "19.0.0-rc.1",
-        "react-dom": "19.0.0-rc.1",
+        "next": "^16.0.10",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
         "recharts": "^2.13.3",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
